--- a/sites/all/themes/bootstrap_admin/css/theme_style.css
+++ b/sites/all/themes/bootstrap_admin/css/theme_style.css
@@ -38,7 +38,7 @@
 .user-menu:hover a{color:#0068ba!important;}
 
 
-.searvhbox{ margin-top:-2px;}
+.searvhbox{ margin-top:-2px; width:200px;}
 
 
 .searvhbox input[type="text"]{ background-color:#f6f6f6!important; border:none!important; }
@@ -86,6 +86,12 @@ background: #000000 url(../img/menuhover.png) no-repeat right center;
 .main-footer .footer_text{ display:block; width:300px; float:left; padding:32px 0;}
 
 .main-footer img{ display:block; float:right; margin-top:8px;}
+
+.not-logged-in{ background: #d2d6de!important;}
+
+.not-logged-in .checkbox {
+    width: 110px; float: left; margin-left: 6px;
+}
 
 
 
