--- a/sites/all/themes/bootstrap_admin/css/theme_style.css
+++ b/sites/all/themes/bootstrap_admin/css/theme_style.css
@@ -150,3 +150,5 @@ background: #000000 url(../img/menuhover.png) no-repeat right center;
 .user-menu{ width:auto; margin-left:auto; margin-right:auto;}
 
 }
+
+.login-box-msgtxt span{font-size: 16px; color: #3c8dbc;}
