--- a/sites/all/themes/bootstrap_admin/css/theme_style.css
+++ b/sites/all/themes/bootstrap_admin/css/theme_style.css
@@ -264,9 +264,9 @@ html.js fieldset.collapsible .fieldset-legend a{color: #000;}
     border-top: 3px solid #d2d6de;
     margin: 0 auto;
     margin-bottom: 20px;
-    width: 80%; padding: 5%;
+    width: 80%; padding: 2% 5%;
     box-shadow: 0 1px 1px rgba(0,0,0,0.1); clear: both; overflow: hidden;}
-.admin-form label{ font-weight: normal; display: block; width: 100%;}
+.admin-form label{ font-weight: normal; display: block; width: 100%; color: #0068ba;}
 
 .admin-form input[type="text"]{ border: solid 1px #d2d6de;
     height: 34px;
@@ -279,13 +279,77 @@ html.js fieldset.collapsible .fieldset-legend a{color: #000;}
         border-radius: 3px;
     -webkit-box-shadow: none;
     box-shadow: none;
-    border: 1px solid  #367fa9; display: inline-block;
+    border: 1px solid  #367fa9; display: block!important;
     padding: 6px 12px;
     margin-bottom: 0;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.42857143;
-    text-align: center; margin-top: 15px;}
+    text-align: center; margin-top: 15px; width: 140px!important; float: left!important;}
+
+
+.admin-form  .deletebtn{     background-color: #3c8dbc;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid  #367fa9; display: block!important;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center; margin-top: 15px; width: 100px; float: left!important; color: #fff; margin-left: 15px;}
+
+.viewdeletebtn{background-color: #3c8dbc!important;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid  #367fa9; display: block!important;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center; margin-top: 15px; width: 100px; float: left!important; color: #fff; margin-left: 15px;}
+
+.viewdeletebtn:hover{color: #fff;}
+
+.viewdeletebtn2{background-color: #3c8dbc!important;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid  #367fa9; display: block!important;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center; margin-top: 10px; width: 100px; float: left!important; color: #fff; }
+.viewdeletebtn2:hover{color: #fff;}
+
+.main_contact{border-radius: 3px;
+    background: #ffffff;
+    border: 1px solid #d2d6de;
+    border-top: 3px solid #d2d6de;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 80%;
+    padding:0 5% 2% 5%;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    clear: both;
+    overflow: hidden;
+}
+
+.main_contact label{ font-size: 16px; color:#0068ba; font-weight: normal; padding-bottom: 0px; width: auto; display: inline-block; padding-right: 8px;}
+
+.main_contact .contact-div{ background:#d2d6de; padding: 10px;
+    margin: 10px 0; }
+
+
+ .headingtext{ margin-top: 2%; text-align: center; color:#0068ba; font-size: 26px; margin-bottom: 25px; }
+
+ .headingtext span{ display: inline-block; border-bottom: solid 2px #0068ba;
+    padding: 0 20px;}
 
 
 @media screen and (max-width:1199px) {
@@ -431,3 +495,4 @@ html.js fieldset.collapsible .fieldset-legend a{color: #000;}
 }
 
 .login-box-msgtxt span{font-size: 16px; color: #3c8dbc;}
+td:last-child a {color: #0068ba;}
