commit on 10-16-2015 6:52pm

--- a/sites/all/themes/bootstrap_admin/css/skin-green.css
+++ b/sites/all/themes/bootstrap_admin/css/skin-green.css
@@ -147,3 +147,4 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', end
   border-bottom-right-radius: 2px;
   border-bottom-left-radius: 0;
 }
+.no_data{color:#0068ba!important;font-size:15px;}
