--- a/sites/all/themes/bootstrap_admin/css/theme_style.css
+++ b/sites/all/themes/bootstrap_admin/css/theme_style.css
@@ -98,7 +98,21 @@ background: #000000 url(../img/menuhover.png) no-repeat right center;
 
 .form-submit{ display: block!important; width: 100%!important; float: none!important; overflow: hidden!important;
 }
-
+.ajax-processed{background-color: #3c8dbc!important;margin-top:10px!important;border-radius: 3px;color:#fff!important;
+    -webkit-box-shadow: none!important;
+    box-shadow: none!important;
+    border: 1px solid #367fa9!important;
+    display: block!important;
+    padding: 6px 12px!important;
+    margin-bottom: 0!important;
+    font-size: 14px!important;
+    /* font-weight: 400; */
+    line-height: 1.42857143!important;
+    /* text-align: center; */
+    margin-top: 15px!important;
+    /* width: 140px!important; */
+   /* float: left!important;*/
+width:140px!important;}
 
 .dashboard_wrapper{ width: 100%;}
 
@@ -248,7 +262,30 @@ html.js fieldset.collapsible .fieldset-legend a{color: #000;}
     font-size: 14px;
     font-weight: 400;
     line-height: 1.42857143;
-    text-align: center; color: #fff; width: auto!important; }
+    text-align: center; color: #fff;  width: auto!important; }
+
+#edit-actions{ text-align: center;}
+#edit-actions input#edit-submit{ width: 140px!important;  margin-right: 10px!important; display: inline-block!important;}
+
+
+.confirmation ul{ margin: 0; padding: 0; display: block; text-align: center;}
+
+.confirmation ul li{ margin: 0; padding: 0; list-style: none; color: #3c8dbc; display: inline; text-transform: capitalize; padding-right: 10px; font-size: 14px;}
+
+.confirmation ul li::after{content:',';}
+.confirmation ul li:last-child::after{content:'';}
+
+#edit-cancel{     background-color: #3c8dbc;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid  #367fa9;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center; color: #fff; width: 100px!important; display: inline-block!important; }
 
 
 .collapsible label{ font-weight: normal; display: block; width: 100%;}
@@ -339,17 +376,40 @@ html.js fieldset.collapsible .fieldset-legend a{color: #000;}
     clear: both;
     overflow: hidden;
 }
+.main_confirmation{border-radius: 3px;
+    background: #ffffff;
+    border: 1px solid #d2d6de;
+    border-top: 3px solid #d2d6de;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 50%;
+    padding:0 5% 2% 5%;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    clear: both;
+    overflow: hidden;
+}
+.headingconfirmtext{ margin-top: 2%; text-align: center; color:#0068ba; font-size: 20px; margin-bottom: 15px; }
+
+.headingconfirmtext span{ display: inline-block;
+    padding: 0 10px;}
+
+.addimage{font-size: 16px; float: right; font-weight: bold; margin-top: 20px; border: 1px solid #e8e8e8; border-radius: 6px; padding: 10px; background: #fff;}
+
+.addimage:hover{background: #f1f1f1;}
 
 .main_contact label{ font-size: 16px; color:#0068ba; font-weight: normal; padding-bottom: 0px; width: auto; display: inline-block; padding-right: 8px;}
 
-.main_contact .contact-div{ background:#d2d6de; padding: 10px;
-    margin: 10px 0; }
+.main_contact .contact-div{ padding: 5px;
+    margin: 5px 0; }
 
 
  .headingtext{ margin-top: 2%; text-align: center; color:#0068ba; font-size: 26px; margin-bottom: 25px; }
 
  .headingtext span{ display: inline-block; border-bottom: solid 2px #0068ba;
     padding: 0 20px;}
+
+
+
 
 
 @media screen and (max-width:1199px) {
@@ -499,3 +559,5 @@ td:last-child a {color: #0068ba;}
 
 .demo .word2,
 .line2 { color: green; }
+
+.add_btn{float:right;padding-right:30px;color: #0068ba!important;font-size:15px;}
