--- a/sites/all/themes/bootstrap_admin/css/theme_style.css
+++ b/sites/all/themes/bootstrap_admin/css/theme_style.css
@@ -561,3 +561,84 @@ td:last-child a {color: #0068ba;}
 .line2 { color: green; }
 
 .add_btn{float:right;padding-right:30px;color: #0068ba!important;font-size:15px;}
+
+.tablediv input[type="text"]{    width: 100%;
+    height: 40px;
+    border: solid 1px #ddd;
+    background: #e8e8e8;
+    padding: 0 5px;
+    margin: 0px!important;
+    display: inline;}
+
+.tablediv  .form-group{ width: 300px;}
+
+
+.tablediv #report-search-by-date-range .form-submit{    background-color: #3c8dbc;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid #367fa9;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    color: #fff;
+    width: auto!important;}
+
+
+.tablediv .odd td{ background-color: #DCDCDC!important;}
+
+.tablediv tr:last-child td{ font-size: 22px; border-top: solid 1px #000!important; background-color: #A9A9A9!important }
+.tablediv tr:last-child td:first-child{ text-align: right;}
+.tablediv tr:last-child td:nth-child(3){ text-align: right;}
+.tablediv td.empty{ text-align: center !important;}
+
+
+.checkout_table{ width:100%; font-family:'OpenSans-Regular'; }
+
+.checkout_table h2{ background:#e4e7e7; padding:18px 10px; font-size:18px; color:#3e3e3f; text-shadow:0 0 1px #fff; margin:20px 0 0 0;  }
+
+
+.checkout_table table{ border:none!important;}
+.checkout_table th{ border:none!important; padding:10px; font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#262626; font-weight:normal;}
+
+.checkout_table td{ border:none!important; padding:10px; font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#262626;}
+
+.checkout_table td input[type="text"]{ width:40px; height:40px; border:solid 1px #ddd; text-align:center;}
+
+.checkout_table .total_Price{ background:#2fc6f3; padding:20px 0 20px 100px; font-size:16px; color:#ffffff; font-family:'OpenSans-Regular';}
+
+.checkout_table .total_Price strong{ font-weight:normal; font-size:26px;}
+
+.checkout_table tr:nth-child(odd){ background:#eff1f1;}
+
+
+
+.checkout_table .admin-form{width: 100%; padding: 1% 2%;}
+
+.checkout_table .admin-form .shipping_class{width: 49%; float: left;}
+
+.checkout_table .admin-form .bill_class{width: 49%; float: right;}
+
+
+.checkout_table .admin-form .payment_class{width: 49%; float: left;}
+
+.checkout_table .admin-form .customer_info{width: 49%; float: right;}
+
+.order_btn_new{margin-top: 0px !important; width: 86px;}
+
+.order_btn_new > input {background: #3C8DBC; padding: 6px 0; border: none; border-radius: 4px; color: #fff;}
+
+
+#edit-address-name{width: 578px!important;}
+
+.comment_add{float: right; margin: 30px 12px 0 0;}
+
+.er{background: transparent none repeat scroll 0% 0% !important;
+    padding: 0px !important;
+    border: medium none;
+    margin-top: 0px !important;
+    margin-bottom: 12px !important;color: #8C2E0B;!important}
